Complete Activity 11: Stripe Backend Integration

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 ##
 ## Get latest from `dotnet new gitignore`
 
+# Development settings with secrets
+appsettings.Development.json
+API/appsettings.Development.json
+
+# SQLite database files
+*.db
+*.db-shm
+*.db-wal
+
 # dotenv files
 .env
 
